--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -64,12 +64,13 @@ jobs:
         export SHELL=/bin/bash
         make build image
     - name: Start KinD
-      uses: engineerd/setup-kind@v0.5.0
+      uses: helm/kind-action@v1.7.0
       with:
         version: ${{ env.kind-version }}
-        image: ${{ env.kind-image }}
         wait: 300s
-        config: /test/e2e/kind-conf.yaml
+        config: test/e2e/kind-conf.yaml
+        cluster_name: control-plane
+        verbosity: 10
     - name: Wait for cluster to finish bootstraping
       run: |
         kubectl wait --for=condition=Ready pods --all --all-namespaces --timeout=300s
