--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -404,6 +404,26 @@
                     },
                     "type": "array"
                   },
+                  "kubernetesSDConfigs": {
+                    "description": "KubernetesSDConfigs defines a list of Kubernetes service discovery configurations.",
+                    "items": {
+                      "description": "KubernetesSDConfig allows retrieving scrape targets from Kubernetes' REST API. See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#kubernetes_sd_config",
+                      "properties": {
+                        "role": {
+                          "description": "Role of the Kubernetes entities that should be discovered. Currently the only supported role is \"Node\".",
+                          "enum": [
+                            "Node"
+                          ],
+                          "type": "string"
+                        }
+                      },
+                      "required": [
+                        "role"
+                      ],
+                      "type": "object"
+                    },
+                    "type": "array"
+                  },
                   "labelLimit": {
                     "description": "Per-scrape limit on number of labels that will be accepted for a sample. Only valid in Prometheus versions 2.27.0 and newer.",
                     "format": "int64",
